fix spacing of site buttons

--- a/src/App.css
+++ b/src/App.css
@@ -73,16 +73,17 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 41.23vw;
 }
 
 .list-of-my-buttons {
   overflow-y: auto;
   max-height: 50vh;
-  padding-right: 10px;
-  padding-bottom: 15px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  column-gap: 20px;
+  width: 41.23vw;
 }
 
 
@@ -136,7 +137,7 @@ p {
 .site-button {
   padding: 10px 2px;
   font-size: 20px;
-  margin: 15px 3.24vw;
+  margin: 15px 22px;
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -162,6 +163,7 @@ p {
   align-items: center;
   flex-grow: 1;
   text-align: center;
+  gap: 10px;
 }
 
 
